endpoints for queriability toggle
