# package/src/swagger_server/swagger/swagger.yaml
@@ -213,6 +213,46 @@ paths:
               $ref: '#/components/schemas/Register'
         description: Contract address and address of party to be deregistered
         required: true
+  /contract/toggle_queriability:
+    post:
+      tags:
+        - contract
+      summary: sets queriability to true if false and vice versa
+      description: ''
+      operationId: toggle_queriability
+      responses:
+        '200':
+          description: OK
+        '401':
+          description: Authorization error
+      x-swagger-router-controller: swagger_server.controllers.id_contract_API_functions
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Address'
+        description: Contract address
+        required: true
+  /contract/check_queriability:
+    post:
+      tags:
+        - contract
+      summary: checks queriability
+      description: ''
+      operationId: check_queriability
+      responses:
+        '200':
+          description: OK
+        '401':
+          description: Authorization error
+      x-swagger-router-controller: swagger_server.controllers.id_contract_API_functions
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Address'
+        description: Contract address
+        required: true
 servers:
   - url: 'http://localhost:8000/v0.1'
 components:
@@ -271,6 +311,13 @@ components:
           type: string
       xml:
         name: Register
+    Address:
+      type: object
+      properties:
+        contract_address:
+          type: string
+      xml:
+        name: Address
   securitySchemes:
     bearerAuth:
       type: http
